aligned all correctly

--- a/health_frontend/src/index.css
+++ b/health_frontend/src/index.css
@@ -2,6 +2,6 @@
   margin: 0;
   padding: 0;
   
-  color: black;
+  
   font-family: "Parkinsans", sans-serif;
 }
